--- a/scss/_countdown.scss
+++ b/scss/_countdown.scss
@@ -5,7 +5,7 @@
     .container > div {
 	height: 30vh;
 	max-height: 40vw;
-	min-height: calc(7em + 7vw);
+	min-height: calc(11em + 7vw);
 
     }
 
